# aikioku

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml
.github/: FUNDING.yml  (+2 more)
apps/server/: pyproject.toml
apps/server/src/: access_tokens.py  auth.py  config.py  events.py  limiter.py  main.py  mcp_server.py  observability.py  runtime_config.py  secrets_store.py
apps/server/src/api/: __init__.py  admin.py  anomaly.py  auth.py  auto_tag.py  buddy.py  budget.py  chat.py  cognitive_state.py  connections.py  conversations.py  entities.py  git_sync.py  graph.py  import_export.py  memory.py  notes.py  plugins.py  question_gen.py  reembed.py  retrieval.py  review.py  schema.py  search.py  serendipity.py  settings.py  setup.py  stats.py  summarization.py  tokens.py  websocket.py
apps/server/src/augmentation/: auto_tag.py  card_auto.py  cognitive_state.py  serendipity.py  spaced_repetition.py  summarization.py
apps/server/src/cache/: semantic_cache.py
apps/server/src/ingestion/: __init__.py  audio_parser.py  docx_parser.py  email_parser.py  image_parser.py  pdf_parser.py  web_parser.py
apps/server/src/knowledge/: __init__.py  embeddings.py  entity_resolution.py  graph.py  note_cascade.py  pipeline.py  reembed.py  reembed_fingerprint.py  schema.py  schema_induction.py
apps/server/tests/: conftest.py  test_access_tokens.py  test_compression.py  test_config.py  test_embeddings_provider.py  test_events_async.py  test_git_sync.py  test_llm_mock.py  test_main_lifespan.py  test_observability.py  test_secrets_store.py
(+242 files in other folders)
