[project]
name = "aikioku"
version = "0.1.0"
description = "AI-Augmented Personal Knowledge Management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",
    "watchfiles>=0.21",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "numpy>=1.24,<2.0",
    "kuzu>=0.4.2",
    "chromadb>=0.4.24",
    "tantivy>=0.11.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "readability-lxml>=0.8.1",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "mcp>=1.27,<2",
    "genanki>=0.13.0",
    "gptcache>=0.1.43",
    "onnxruntime>=1.17",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-PyYAML",
    "lxml-stubs",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers -m 'not integration'"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
